大幅修改： 抛弃原本使用的Obsidian Markdown规范
优化结构和可读性

上传至Gitee和Github

--- a/0 - 前言.md
+++ b/0 - 前言.md
@@ -1,36 +1,49 @@
-# 作者介绍
-我叫tsavpyn，同事们也常叫我Krash，呼号2073，是bilibili的一位不知名UP主，同时也是学生党。
+# 关于作者
 
-2020年底，我了解到了Ready Or Not这款Tactical FPS游戏，随后，在2021年12月25日，也就是~~苏联解体日~~圣诞节那天买下了Ready Or Not。之后就是长达两个月的基础玩法探索。依靠自学CQB取得了一些经验。
+## 作者介绍
 
-2023年1月，我组建了一个QQ群，叫*严阵以待CQB新手群*<sup>1</sup>，因为自己亲身体验过入门的难度，也希望能在帮助别人的同时促进自己的进步。
+早上/下午/晚上好，我叫tsavpyn，同事们也常叫我Krash，呼号2073，是bilibili的一位不知名UP主。
 
-我们群接纳了不少新玩家，也有高手。多亏几位管理的维护，我们至今依旧保持着良好的氛围。
+2020年底，我了解到了Ready Or Not这款Tactical FPS游戏，随后，在2021年12月25日，也就是~~苏联解体日~~圣诞节那天买下了Ready Or
+Not。之后就是长达两个月的基础玩法探索。依靠自学CQB取得了一些经验。
+
+2023年1月，组建了一个QQ群，*严阵以待CQB新手群*<sup>1</sup>，因为自己亲身体验过入门的难度，也希望能在帮助别人的同时促进自己的进步。
+
+我们群接纳了不少玩家，也有高手。多亏几位管理的维护，我们至今依旧保持着良好的氛围。
 
 我们尊重这款游戏，尊重背后的开发团队，尊重游戏内容的意义，也尊重不同的玩家和任何玩法<sup>2</sup>。
 
-# 前言
+# 关于《RON前置手册》
+
+## 前言
+
 对于这款游戏，我相信社区里已经有很多优质的玩法教学，不论是否“专业”；况且，游戏本身自由度极高，没有固定或者最优玩法。因此，我们没有必要再以这种方式介绍游戏玩法。写这本《前置手册》，意义在于“前置”，是希望能解决游戏外的问题。
 
-我们曾经遇到过这种情况：计划录制视频，却因为有成员始终无法连接上主机，亦或者游戏经常闪退、mod不兼容等等问题。同时我们也看到，不论是我们自己的*新手群*还是别的开黑群，都有玩家在被这些问题困扰。我们希望以这种方式分享我们解决此类问题的经验，节省玩家的时间，把注意力放在游戏本身上，而不用浪费时间在这些问题上。
+我们曾经遇到过这种情况：计划录制视频，却因为有成员始终无法连接上主机，亦或者游戏经常闪退、mod不兼容等等问题。同时我们也看到，不论是我们自己的
+*新手群*还是别的开黑群，都有玩家在被这些问题困扰。我们希望以这种方式分享我们解决此类问题的经验，节省玩家的时间，把注意力放在游戏本身上，而不用浪费时间在这些问题上。
 
 以上就是这本《前置手册》存在的意义。
 
-# 时效性？
+## 时效性？
+
 随着VOID Interactive<sup>3</sup>开发团队对游戏的不断开发的更新，本手册的某些内容难免会与最新内容有所出入，所给出的解决办法可能不适用于最新版本。
 
 包括我在内，维护这本《前置手册》的成员们会及时查看游戏更新日志，并测试可能发生改变的游戏内容，以确保本手册的有效性。
 
-当然，只靠我们的力量是远远不够的。我们需要各位玩家的帮助。**如果发现了本手册的错误或者内容失效，请及时反馈我们**，我们将对现有内容进行修改和纠正。
+当然，只靠我们的力量是远远不够的。我们需要各位玩家的帮助。**如果发现了本手册的错误或者内容失效，请及时反馈我们**
+，我们将对现有内容进行修改和纠正。
 
 以下是针对本手册内容反馈的联系方式：
-* 邮箱/Email：manual@rogic.eu.org
+
+* 邮箱/Email：[manual@rogic.eu.org](mailto://manual@rogic.eu.org)
 * QQ群聊：859863477
 * bilibili私信：[TSAVPYN](https://space.bilibili.com/351531280)
 
-注意：所有内容均是个人经验所得，可能存在不适用或不一致的情况，请结合自己实际情况判断。所有内容仅供参考，不代表VOID Interactive或任何社区的看法。
+注意：所有内容均是个人经验所得，可能存在不适用或不一致的情况，请结合自己实际情况判断。所有内容仅供参考，不代表VOID
+Interactive或任何社区的看法。
 
 ---
-1. 严阵以待CQB新手群* 群号为`199869650`
-2. 作弊不可接受
+
+1. *严阵以待CQB新手群* 群号为`199869650`
+2. 作弊除外
 3. Ready Or Not的开发工作室
