--- a/4 - 多人游戏与网络.md
+++ b/4 - 多人游戏与网络.md
@@ -1,55 +1,79 @@
-1. 多人游戏最多支持几人？
-	在没有进行改动（如使用mod或控制台）的情况下为**5人**。
+## 多人游戏最多支持几人？
 
-2. 多人游戏连不上：显示YOUR CONNECTION TO THE HOST HAS LOST
-	即：连接丢失/无法连接
-	可能问题：
-	* Steam好友网络未连接
-	* Ready Or Not身份验证网络未连接
-	* mod不兼容
-	解决方案：
-	* 确认Steam好友网络是否连接（即Steam显示在线）
-	* 确认Windows防火墙（或Windows Defender）允许Ready Or Not进行通信
-	* 确认主界面右下角是否显示绿色的**已连接（CONNECTED）**
-	* 更换网络
-	* 更换到更稳定的国内+海外DNS
-	* **主机端**<sup>1</sup>、**客户端**<sup>2</sup>去除不兼容mod（排查方法详见mod排查）
-	* 关闭VPN和针对Ready Or Not的加速器
-	注意：Ready Or Not没有中心服务器，**不需要，也不要开启任何加速器**！
+在没有进行改动（如使用mod或控制台）的情况下为**5人**。
 
-3. 多人游戏连不上：显示SERVER CHECKSUM FAILED
-	即：mod检查未通过
-	问题：主机端使用了mod并且开启了mod检查
-	解决方案：
-	* 主机端和客户端关闭**mod检查（SERVER SIDE CHECKSUM）**
-	* 主机端和客户端删除所有mod（以**Clean Save Data/Mods** 启动Ready Or Not）
+## 多人游戏连不上
 
-4. 多人游戏连不上：加载时进度条卡进度或无响应
-	可能原因：
-	* 机械硬盘加载较慢导致程序**假死**<sup>3</sup>
-	* 游戏崩溃
-	解决方案：
-	* 若使用机械硬盘，请耐心等待60~120秒，若仍然没有反应请强制结束游戏<sup>4</sup>
+### YOUR CONNECTION TO THE HOST HAS LOST
 
-5. 多人游戏连不上：闪退崩溃
-	可能原因：
-	* mod不兼容
-	* 游戏本体受损
-	解决方案：
-	* 若主机端或客户端使用mod，参见 **问题3解决方案**
-	* 在Steam库中进行**游戏文件校验**
+即：连接丢失/无法连接
 
-6. 疑似mod不生效（皮肤、地图、功能等）？
-	参见 **5.5 - mod作用域**
+可能问题：
 
-7. 主机端任务加载时崩溃/闪退？
-	可能原因：
-	* 主机端游戏崩溃
-	解决方案：
-	* 检查主机端mod是否兼容
-	* 检查客户端mod是否与主机端一致
-	* 参见 **5.5 - mod作用域** 及 **5.9 - 打了mod游戏会崩？**
+* Steam好友网络未连接
+* Ready Or Not身份验证网络未连接
+* mod不兼容
+
+解决方案：
+
+* 确认Steam好友网络是否连接（即Steam显示在线）
+* 确认Windows防火墙（或Windows Defender）允许Ready Or Not进行通信
+* 确认主界面右下角是否显示绿色的**已连接（CONNECTED）**
+* 更换网络
+* 更换到更稳定的国内+海外DNS
+* **主机端**<sup>1</sup>、**客户端**<sup>2</sup>去除不兼容mod（排查方法详见mod排查）
+* 关闭VPN和针对Ready Or Not的加速器
+
+注意：Ready Or Not没有中心服务器，**不需要，也不要开启任何针对Ready Or Not的加速器**！
+
+### SERVER CHECKSUM FAILED
+
+即：mod检查未通过
+
+问题：主机端使用了mod并且开启了mod检查
+
+解决方案：
+
+* 主机端和客户端关闭**mod检查（SERVER SIDE CHECKSUM）**
+* 主机端和客户端删除所有mod（以**Clean Save Data/Mods** 启动Ready Or Not）
+
+### 加载时进度条卡进度或无响应
+
+可能原因：
+
+* 机械硬盘加载较慢导致程序**假死**<sup>3</sup>
+* 游戏崩溃
+
+* 解决方案：
+* 若使用机械硬盘，请耐心等待60~120秒，若仍然没有反应请强制结束游戏<sup>4</sup>
+
+### 闪退崩溃
+
+可能原因：
+
+* mod不兼容
+* 游戏本体受损
+
+* 解决方案：
+* 若主机端或客户端使用mod，参见 **问题3解决方案**
+* 在Steam库中进行**游戏文件校验**
+
+## 疑似mod不生效（皮肤、地图、功能等）？
+
+参见 **5.5 - mod作用域**
+
+## 主机端任务加载时崩溃/闪退？
+
+可能原因：
+
+* 主机端游戏崩溃
+
+* 解决方案：
+* 检查主机端mod是否兼容
+* 检查客户端mod是否与主机端一致
+* 参见 **5.5 - mod作用域** 及 **5.9 - 打了mod游戏会崩？**
 
 ---
+
 1. 主机端（Host）即发起多人游戏的玩家，“房主”
 2. 客户端（Client）即加入多人游戏的玩家
