完成滤镜及语音包文档

--- a/7 - 滤镜及语音包.md
+++ b/7 - 滤镜及语音包.md
@@ -9,7 +9,8 @@
 
 一般滤镜文件提供为一个压缩文件，如 **.zip**, **.7z** 或 **.rar**
 
-内部根目录结构如下：
+压缩文件内部根目录结构如下：
+
 ````
 \ShaderName
 dxgi.dll
@@ -21,7 +22,7 @@ ReShade.ini
 * 安装滤镜
     1. 打开Ready Or Not的**Steam库页面**，点击右侧**齿轮图标**，选择**管理**->**浏览本地文件**
     2. 在打开的文件窗口中打开以下目录：`\ReadyOrNot\Binaries\Win64`
-    3. 将 **解压后**的滤镜文件和文件夹放入此目录中
+    3. 将**解压后**的滤镜文件和文件夹放入此目录中
     4. 重启游戏即可
 * 卸载滤镜
     1. 打开Ready Or Not的**Steam库页面**，点击右侧**齿轮图标**，选择**管理**->**浏览本地文件**
@@ -45,7 +46,33 @@ ReShade.ini
 
 顾名思义语音包就是用于替换游戏内的语音和音效，比如警员喊话、NPC回应和无线电内容
 
+## 语音包文件的结构
+
+与滤镜文件结构类似，语音包文件也是一个压缩文件，如 **.zip**, **.7z** 或 **.rar**
+
+压缩文件内部根目录结构如下：
+
+````
+\Movies
+\VO
+````
+
+用途：
+
+* `\Movies`存放游戏启动画面视频（部分语音包可能不包含此文件夹）
+* `\VO`存放游戏语音文件
+
 ## 语音包的安装与卸载
 
 * 安装语音包：
-    1. 
+    1. 打开Ready Or Not的**Steam库页面**，点击右侧**齿轮图标**，选择**管理**->**浏览本地文件**
+    2. 在打开的文件窗口中打开以下目录：`\ReadyOrNot\Binaries\Content`
+    3. 先备份游戏原版音效和启动画面： 将**VO**和**Movies**文件夹复制到别的位置 或 压缩保留
+    4. 将**解压后**的语音包文件夹放入此目录中
+    5. 重启游戏即可
+
+* 卸载语音包：
+    1. 打开Ready Or Not的**Steam库页面**，点击右侧**齿轮图标**，选择**管理**->**浏览本地文件**
+    2. 在打开的文件窗口中打开以下目录：`\ReadyOrNot\Binaries\Content`
+    3. 将原版备份移动到此文件夹，若有同名文件直接覆盖
+    4. 重启游戏即可
