增加部分关于性能优化内容

--- a/1 - 游戏前.md
+++ b/1 - 游戏前.md
@@ -8,7 +8,8 @@
 ## 需要什么配置和装备？
 
 配置要求详见[Ready Or Not的Steam商店页](https://store.steampowered.com/app/1144200/Ready_or_Not/)
-，除此以外建议将游戏安装到固态硬盘（SSD）上，硬盘标称大小应为125GB或以上。为了和队友的语音交流顺畅、方便听声，建议带上音质较好的耳机（不建议蓝牙®，延迟大），以及准备一块清晰的麦克风。
+，除此以外建议将游戏安装到固态硬盘（SSD）上，硬盘实际可用空间应为125GB或以上。
+为了和队友的语音交流顺畅、方便听声，建议带上音质较好的耳机（不建议蓝牙®，延迟大），以及准备一块清晰的麦克风。
 
 Ready Or Not不支持也无需手柄（控制器）。
 
@@ -19,13 +20,36 @@ Ready Or Not不支持也无需手柄（控制器）。
 
 注意：下载Steam游戏无需加速器或VPN<sup>2</sup>。
 
+## 启动时有三个选项，选哪个？
+
+一般情况下Ready Or Not在启动时提供三个选项：
+
+* 玩Ready Or Not (DirectX 11)
+* 玩Ready Or Not (DirectX 12)
+* Clean Save Data / Mods
+
+前两个选项均是启动游戏，第三个选项用于删除游戏所有数据（如果出现游戏出现问题可使用此选项）
+
+相较于DirectX 11，DirectX 12（以下DirectX 11、DirectX 12分别简称为Dx 11和Dx12）更加依赖CPU调度，对CPU的要求也就更高，但是一定程度
+上可以降低显卡压力，略微提升帧数。 某些情况下，使用Dx 12会使帧率不稳定，导致画面卡顿或延迟、撕裂，请改为使用Dx 11。
+
+特别注意：使用Dx 12需要显卡支持<sup>3</sup>，不支持Dx 12的显卡反而会降低游戏表现。
+
+有关于性能和画面优化的内容，参见[性能与画面优化](6%20-%20性能与画面优化.md)章节。
+
 ## 没有中文？
 
-中文在上个大版本更新（Adam Update，2022年12月9日<sup>3</sup>）中因为游戏内容大幅修改而移除，在将来可能回归。当前若想使用中文，
-**需要安装中文补丁mod**，详见**5.6 - 如何安装和删除mod？**
+中文在上个大版本更新（Adam Update，2022年12月9日<sup>5</sup>）中因为游戏内容大幅修改而移除，在将来可能回归。当前若想使用中文，需要安装
+[中文补丁mod](/archive/pakchunk999-Mods_R18G_CH_Localization_P.pak)
+。有关如何安装mod，详见[如何安装和删除mod？](5%20-%20mod.md)
 
 ---
 
 1. 若无特别说明，皆使用Gigabyte（GB）作为标准单位而不是Gigabit（Gb）。1 GB = 8 Gb
 2. VPN（Virtual Private Network，虚拟专用网络）与加速器的区别是：VPN一般接管整个系统的网络；而加速器则一般只接管某个软件的网络
-3. 若无特别说明，本手册所有时间和日期皆为 北京时间/BJT (UTC+08:00)
+3. 查看自己的设备是否支持Dx 12：
+    1. 按下`Windows`+G，在上方的Xbox控制栏选择**设置**按钮
+    2. 在弹出的设置窗口中，选择左侧栏的**游戏功能**
+    3. 若右侧“图形”标签下显示**DirectX 12旗舰版已就绪**，则设备支持Dx 12
+4.
+5. 若无特别说明，本手册所有时间和日期皆为 北京时间/BJT (UTC+08:00)
