--- a/3 - 单人游戏与游戏过程.md
+++ b/3 - 单人游戏与游戏过程.md
@@ -27,7 +27,7 @@
 * 尽可能地减少伤亡
 * 完成所有任务
 * 收集所有证物、汇报情况
-  对于某个任务的不同模式，RoE可能不同，参见**问题6**。
+  对于某个任务的不同模式，RoE可能不同，参见[不同模式的RoE有什么区别？](3%20-%20单人游戏与游戏过程.md)
 
 ## 不同模式的RoE有什么区别？
 
@@ -35,3 +35,8 @@
 * **突袭模式（Raid）** 的RoE被放宽很多。只要目击嫌疑人就可击杀
 
 其他模式同理，参见游戏内任务简报。
+
+---
+
+1. Bug：漏洞
+2. RoE：~~Recommendations~~Rules of Engagement
