--- a/4 - 多人游戏与网络.md
+++ b/4 - 多人游戏与网络.md
@@ -41,10 +41,11 @@
 
 可能原因：
 
-* 机械硬盘加载较慢导致程序**假死**<sup>3</sup>
+* 机械硬盘读取较慢导致程序**假死**<sup>3</sup>
 * 游戏崩溃
 
-* 解决方案：
+解决方案：
+
 * 若使用机械硬盘，请耐心等待60~120秒，若仍然没有反应请强制结束游戏<sup>4</sup>
 
 ### 闪退崩溃
@@ -54,13 +55,14 @@
 * mod不兼容
 * 游戏本体受损
 
-* 解决方案：
-* 若主机端或客户端使用mod，参见 **问题3解决方案**
+解决方案：
+
+* 若主机端或客户端使用mod，参见[多人游戏连不上：SERVER CHECKSUM FAILED](4%20-%20多人游戏与网络.md)
 * 在Steam库中进行**游戏文件校验**
 
 ## 疑似mod不生效（皮肤、地图、功能等）？
 
-参见 **5.5 - mod作用域**
+参见[mod作用域](5%20-%20mod.md)
 
 ## 主机端任务加载时崩溃/闪退？
 
@@ -71,9 +73,11 @@
 * 解决方案：
 * 检查主机端mod是否兼容
 * 检查客户端mod是否与主机端一致
-* 参见 **5.5 - mod作用域** 及 **5.9 - 打了mod游戏会崩？**
+* 参见[mod作用域](5%20-%20mod.md)及[打了mod游戏会崩？](5%20-%20mod.md)
 
 ---
 
 1. 主机端（Host）即发起多人游戏的玩家，“房主”
 2. 客户端（Client）即加入多人游戏的玩家
+3. 假死：程序仍然在调度资源但显示无响应或窗口冻结
+4. 按下`CTRL`+`SHIFT`+`ESC`打开任务管理器，选中Ready Or Not进程右键结束任务
