--- a/6 - 性能与画面优化.md
+++ b/6 - 性能与画面优化.md
@@ -1,1 +1,8 @@
-待维护
+## 为什么游戏很吃性能？
+
+Ready Or Not就其画面表现和游戏内容来看，与其他同级游戏相比显得配置要求更高，主要原因可以简单归结为优化不好。
+具体的配置要求详见[Ready Or Not的Steam商店页](https://store.steampowered.com/app/1144200/Ready_or_Not/)。
+
+## 画面卡顿、撕裂
+
+可能原因：
