完成性能优化编写

--- a/6 - 性能与画面优化.md
+++ b/6 - 性能与画面优化.md
@@ -3,6 +3,62 @@
 Ready Or Not就其画面表现和游戏内容来看，与其他同级游戏相比显得配置要求更高，主要原因可以简单归结为优化不好。
 具体的配置要求详见[Ready Or Not的Steam商店页](https://store.steampowered.com/app/1144200/Ready_or_Not/)。
 
-## 画面卡顿、撕裂
+## 画面问题
 
-可能原因：
+### 画面不流畅、模糊、卡顿、撕裂
+
+解决方案：
+
+* 降低画质
+    1. 启动Ready Or Not，打开**设置（OPTIONS）**，在左侧栏找到**画面（GRAPHICS）**
+    2. 在右侧**选择画质预设（SELECT GRAPHICS PRESET）** 选择合适的档位，从上至下分别是
+       **自定义-低画质-中画质-高画质-最高画质**， 建议**中画质**
+    3. 保存立即生效
+
+* 使用AMD FSR或NVIDIA DLSS<sup>1</sup>：
+    * 使用**AMD或NVIDIA显卡**启用**AMD FSR**：
+        1. 启动Ready Or Not，打开**设置（OPTIONS）**，在左侧栏找到**画面（GRAPHICS）**
+        2. 在右侧找到**进阶画面设置（ADVANCED GRAPHICS SETTINGS）**
+        3. 下拉找到**AMD FSR（AMD FIDELITYFX SUPER RESOLUTION）** 标签，将**FSR质量（FSR QUALITY）** 调整至合适的档位，从左至右
+           分别是**关闭-画质优先-偏向画质-平衡-性能优先**，建议**平衡**
+        4. 保存立即生效
+
+    * 使用**NVIDIA显卡**启用**NVIDIA DLSS**：
+        1. 启动Ready Or Not，打开**设置（OPTIONS）**，在左侧栏找到**画面（GRAPHICS）**
+        2. 在右侧切换到**进阶画面设置（ADVANCED GRAPHICS SETTINGS）**
+        3. 下拉找到**NVIDIA DLSS** 标签，将**DLSS质量（DLSS QUALITY）** 调整至合适的档位，从左至右分别是
+           **关闭-画质优先-平衡-偏向性能-性能优先**，建议**平衡**
+        4. 保存立即生效
+
+* （仅限NVIDIA显卡）使用**NVIDIA Reflex**相关功能
+    1. 启动Ready Or Not，打开**设置（OPTIONS）**，在左侧栏找到**画面（GRAPHICS）**
+    2. 在右侧切换到**进阶画面设置（ADVANCED GRAPHICS SETTINGS）**
+    3. 下拉找到**NVIDIA REFLEX** 标签，将**NVIDIA REFLEX LOW LATENCY** 调整至合适的档位，从上至下分别是
+       **关闭-仅启用-加持启用**，建议**仅启用**
+    4. 保存立即生效
+
+* 降低分辨率
+    1. 启动Ready Or Not，打开**设置（OPTIONS）**，在左侧栏找到**画面（GRAPHICS）**
+    2. 在右侧**分辨率（RESOLUTION）** 选择合适的档位（一般**选择最大**，除非性能不够）
+    3. 保存立即生效
+* 降低采样率（仅针对未开启AMD FSR或NVIDIA DLSS）
+    1. 启动Ready Or Not，打开**设置（OPTIONS）**，在左侧栏找到**画面（GRAPHICS）**
+    2. 在右侧**采样率（RESOLUTION SCALE）** 选择合适的档位（**一般选择100%**，除非性能不够），若
+       **启用了AMD FSR或NVIDIA DLSS**，请将采样率**调整至150%**
+
+* （针对Windows 11）启用/关闭**窗口化游戏优化**
+    1. 打开设置，进入以下路径：`系统->屏幕->显示卡`
+    2. 选择**默认图形设置**，启用或关闭**窗口化游戏优化**
+
+* 启用/关闭垂直同步
+    1. 启动Ready Or Not，打开**设置（OPTIONS）**，在左侧栏找到**画面（GRAPHICS）**
+    2. 在右侧切换到**进阶画面设置（ADVANCED GRAPHICS SETTINGS）**
+    3. 勾选或取消勾选**垂直同步（V-SYNC）**
+    4. 保存立即生效
+
+### 画面闪动、鼠标闪动、悬浮窗不可见
+
+解决方案：
+
+1. 启动Ready Or Not，打开**设置（OPTIONS）**，在左侧栏找到**画面（GRAPHICS）**
+2. 在右侧**显示模式（SCREEN MODE）** 选择**窗口化全屏（WINDOWED FULLSCREEN）**
