增加关于光敏性癫痫、分级和PTSD的提示 修改部分关于性能与优化的内容

--- a/1 - 游戏前.md
+++ b/1 - 游戏前.md
@@ -1,3 +1,21 @@
+# 开始游戏前的重要声明（必读）
+
+## 有关光敏性癫痫
+
+Ready Or Not的画面**可能包含强光源刺激、闪光刺激等视觉刺激**。如果您先前有光敏性癫痫史，请不要继续游戏。
+
+如果在游戏过程中出现身体不适（例如眩晕），**请立即停止游戏并休息**，如有必要请寻求医护人员帮助。
+
+## 有关分级和PTSD（创伤后应激障碍）
+
+Ready Or Not游戏内容包括写实血腥暴力元素。在英国和欧洲地区按照PEGI标准已被评为**PEGI 16级**，同时暂定为
+**ESRB MATURE 17+**。
+
+鉴于游戏的画面性质和所描绘的残酷现实，该游戏适合成熟玩家。我们也**强烈建议 经历过犯罪暴力、人质危机或恐怖主义等个人创伤事件的人
+不要玩这款游戏**。这款游戏的核心是向世界各地尽职尽责的执法人员致敬，绝不是为了美化懦弱的犯罪行为。
+
+# 游戏本体
+
 ## 为什么占用这么大？
 
 截至目前，Ready Or Not占用空间为92.02 GB（736.16 Gb<sup>1</sup>）。占用过大的原因有如下几点：
