修改关于mod作用域内容

--- a/4 - 多人游戏与网络.md
+++ b/4 - 多人游戏与网络.md
@@ -20,8 +20,21 @@
 * 确认Windows防火墙（或Windows Defender）允许Ready Or Not进行通信
 * 确认主界面右下角是否显示绿色的**已连接（CONNECTED）**
 * 更换网络
-* 更换到更稳定的国内+海外DNS
-* **主机端**<sup>1</sup>、**客户端**<sup>2</sup>去除不兼容mod（排查方法详见mod排查）
+
+  特别注意：不建议使用**蜂窝网络（移动数据）** 游玩Ready Or Not ~~，不要问为什么~~
+* 更换DNS<sup>1</sup>（Ready Or Not验证网络使用**IPv4**）
+    1. 打开**控制面板**，进入以下路径：`网络和Internet->网络和共享中心`
+    2. 在左侧栏找到更改适配器设置。右键*当前的网络连接*，选择**属性**
+    3. 双击列表中的**Internet 协议版本 4 (TCP/IPv4)**
+    4. 选择**使用下面的DNS地址**，在**首选DNS服务器**和**备用DNS服务器**中填入DNS服务器地址。
+       以下是建议的DNS服务器地址（标注\*的为**海外DNS**），可自行组合找到最优方案，建议**首选DNS为国内DNS**，
+       **备用DNS为海外DNS**。
+        * 阿里：`223.5.5.5`和`223.6.6.6`
+        * 114DNS：`114.114.114.114`和`114.114.115.115`
+        * \***Google**：`8.8.8.8`和`8.8.4.4`
+        * \***Cloudflare**：`1.1.1.1`和`1.0.0.1`
+        * \***OpenDNS**：`208.67.222.222`和`208.67.220.220`
+* **主机端**、**客户端**<sup>2</sup>去除不兼容mod（排查方法详见mod排查）
 * 关闭VPN和针对Ready Or Not的加速器
 
 注意：Ready Or Not没有中心服务器，**不需要，也不要开启任何针对Ready Or Not的加速器**！
@@ -30,12 +43,15 @@
 
 即：mod检查未通过
 
-问题：主机端使用了mod并且开启了mod检查
+可能原因： 
+
+* 主机端使用了mod并且开启了mod检查
+* 客户端与主机端没有使用相同mod
 
 解决方案：
 
 * 主机端和客户端关闭**mod检查（SERVER SIDE CHECKSUM）**
-* 主机端和客户端删除所有mod（以**Clean Save Data/Mods** 启动Ready Or Not）
+* 主机端和客户端删除所有mod（以**Clean Save Data/Mods** 启动Ready Or Not，再正常启动游戏）
 
 ### 加载时进度条卡进度或无响应
 
@@ -75,9 +91,15 @@
 * 检查客户端mod是否与主机端一致
 * 参见[mod作用域](5%20-%20mod.md)及[打了mod游戏会崩？](5%20-%20mod.md)
 
+## 游戏延迟高、移动卡顿回溯
+
+解决方案：
+* 关闭VPN和针对Ready Or Not的加速器
+
 ---
 
-1. 主机端（Host）即发起多人游戏的玩家，“房主”
-2. 客户端（Client）即加入多人游戏的玩家
+1. DNS：即Domain Name System，域名服务器。作用是解析域名（example.com），返回IP地址（0.0.0.0）。一定程度上决定了直观感受到的网络速度。
+   运营商默认的DNS一般不稳定或解析海外域名较慢，替换为海外DNS地址可能有助于提高连接到Ready Or Not验证服务器或Steam好友网络的速度。
+2. 主机端、客户端：主机端（Host）即发起多人游戏的玩家，“房主”；客户端（Client）即加入多人游戏的玩家
 3. 假死：程序仍然在调度资源但显示无响应或窗口冻结
 4. 按下`CTRL`+`SHIFT`+`ESC`打开任务管理器，选中Ready Or Not进程右键结束任务
