优化文件结构 增加更详细的联机和崩溃问题解决教学 增加附件2、附件3 优化README.md

--- a/3 - 游戏内容.md
+++ b/3 - 游戏内容.md
@@ -27,7 +27,7 @@
 * 尽可能地减少伤亡
 * 完成所有任务
 * 收集所有证物、汇报情况
-  对于某个任务的不同模式，RoE可能不同，参见[不同模式的RoE有什么区别？](3%20-%20单人游戏与游戏过程.md)
+  对于某个任务的不同模式，RoE可能不同，参见[不同模式的RoE有什么区别？](3%20-%20游戏内容.md)
 
 ## 不同模式的RoE有什么区别？
 
@@ -35,6 +35,10 @@
 * **突袭模式（Raid）** 的RoE被放宽很多。只要目击嫌疑人就可击杀
 
 其他模式同理，参见游戏内任务简报。
+
+## 部分地图渲染光影有问题？
+
+部分地图会有光影渲染问题，如**樱桃农场（Cherryessa Farm）**，暂时无法通过调整设置或使用mod解决此问题。
 
 ---
 
