--- a/4 - 多人游戏与网络.md
+++ b/4 - 多人游戏与网络.md
@@ -1,6 +1,34 @@
+# 关于多人游戏
+
 ## 多人游戏最多支持几人？
 
 在没有进行改动（如使用mod或控制台）的情况下为**5人**。
+
+若要突破人数限制，最简单的方式是使用[突破人数mod](archive/pakchunk999-InGameMenu_P.pak)。
+
+## 如何进行多人游戏？
+
+确认主界面右下角显示绿色的**已连接（CONNECTED）**，此时可以以三种方式加入多人游戏：
+
+* **创建房间（公开）**：PUBLIC LOBBY
+* **创建房间（仅好友）**：FRIENDS ONLY
+* **加入公开房间（在线匹配）**：FIND COOP SESSION
+
+## 如何进行在线匹配？
+
+确认主界面右下角显示绿色的**已连接（CONNECTED）**，
+在主界面点击**在线匹配（FIND COOP SESSION）** 即可进行匹配
+
+如果按钮不可用，请检查网络连接，参见[多人游戏连不上：YOUR CONNECTION TO THE HOST HAS LOST](4%20-%20多人游戏与网络.md)
+
+## Ready Or Not的在线匹配机制？
+
+Ready Or Not将优先搜索并加入延迟最低的房间，意味着理论上你最可能加入附近区域的房间（同个城市或省份）。
+如果使用加速器加速到海外，则可能匹配到当地的房间。
+
+点击按钮后，Ready Or Not会分别搜索延迟低于60ms，80ms，120ms，160ms，180ms的房间，如果都搜索不到则判定为没有可用房间。
+
+# 多人游戏问题
 
 ## 多人游戏连不上
 
@@ -35,15 +63,15 @@
         * \***Cloudflare**：`1.1.1.1`和`1.0.0.1`
         * \***OpenDNS**：`208.67.222.222`和`208.67.220.220`
 * **主机端**、**客户端**<sup>2</sup>去除不兼容mod（排查方法详见mod排查）
-* 关闭VPN和针对Ready Or Not的加速器
+* 国内游玩请关闭VPN和针对Ready Or Not的加速器
 
-注意：Ready Or Not没有中心服务器，**不需要，也不要开启任何针对Ready Or Not的加速器**！
+注意：Ready Or Not没有中心服务器，国内游玩**不需要，也不要开启任何针对Ready Or Not的加速器**！
 
 ### SERVER CHECKSUM FAILED
 
 即：mod检查未通过
 
-可能原因： 
+可能原因：
 
 * 主机端使用了mod并且开启了mod检查
 * 客户端与主机端没有使用相同mod
@@ -78,7 +106,7 @@
 
 ## 疑似mod不生效（皮肤、地图、功能等）？
 
-参见[mod作用域](5%20-%20mod.md)
+可能是不兼容或未生效，参见[mod作用域](5%20-%20mod.md)
 
 ## 主机端任务加载时崩溃/闪退？
 
@@ -94,7 +122,10 @@
 ## 游戏延迟高、移动卡顿回溯
 
 解决方案：
-* 关闭VPN和针对Ready Or Not的加速器
+
+* 参见[多人游戏连不上：YOUR CONNECTION TO THE HOST HAS LOST](4%20-%20多人游戏与网络.md)
+* 如果是**跨洲联机则建议使用加速器或VPN**
+* 游戏内将防护插板调整为**陶瓷插板**或**凯夫拉插板**可解决移动回溯问题
 
 ---
 
