修改关于mod作用域和语音包的描述

--- a/7 - 滤镜及语音包.md
+++ b/7 - 滤镜及语音包.md
@@ -60,14 +60,15 @@ ReShade.ini
 用途：
 
 * `\Movies`存放游戏启动画面视频（部分语音包可能不包含此文件夹）
-* `\VO`存放游戏语音文件
+* `\FMOD`存放游戏场景音效（部分语音包肯恩恶搞不包含此文件夹）
+* `\VO`存放游戏角色语音文件
 
 ## 语音包的安装与卸载
 
 * 安装语音包：
     1. 打开Ready Or Not的**Steam库页面**，点击右侧**齿轮图标**，选择**管理**->**浏览本地文件**
     2. 在打开的文件窗口中打开以下目录：`\ReadyOrNot\Binaries\Content`
-    3. 先备份游戏原版音效和启动画面： 将**VO**和**Movies**文件夹复制到别的位置 或 压缩保留
+    3. 先备份游戏原版音效和启动画面： 将**VO**、**Movies**和**FMOD**文件夹复制到别的位置 或 压缩保留
     4. 将**解压后**的语音包文件夹放入此目录中
     5. 重启游戏即可
 
